--- a/Exercise-Tracker.Challenge/Exercise-Tracker.Challenge.csproj
+++ b/Exercise-Tracker.Challenge/Exercise-Tracker.Challenge.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>Exercise_Tracker(EntityFramework).Lawang</RootNamespace>
+    <RootNamespace>Exercise_Tracker.Challenge</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
